fix hover on header-link, vertical align Attaach file

--- a/src/sass/components/_header.sass
+++ b/src/sass/components/_header.sass
@@ -131,7 +131,6 @@
 	&-link
 		display: inline-block
 		text-transform: uppercase
-		line-height: 1.67
 		letter-spacing: 3px
 		transition: color .15s
 		position: relative
@@ -154,7 +153,7 @@
 			&:hover
 				.navigation-link__item
 					color: rgba($link-color, .7)
-					-webkit-transform-style: preserve-3d
+					// -webkit-transform-style: preserve-3d
 		   			-webkit-backface-visibility: hidden
 					&:first-child
 						&:hover
