--- a/src/sass/components/_inputs.sass
+++ b/src/sass/components/_inputs.sass
@@ -173,8 +173,8 @@
 		&.drop-item
 			border: none
 			cursor: pointer
-			// display: flex
-			// align-items: center
+			display: flex
+			align-items: center
 			.dz-message
 				font-size: 0
 				position: relative
